test/Fail/DoNotFireLiteralCatchAllForNeutrals.err
DoNotFireLiteralCatchAllForNeutrals.agda:17.13-20: error: [UnequalTerms]
⊤ !=< NotNull s
when checking that the expression trivial has type NotNull s
